# nba-fastapi

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  database.py  docker-compose.yml  main.py  models.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0e2e2409005b_change_staff_table.py  532d2eb1879f_added_position_table.py  65707e61042e_create_tables.py  7daf904ebd3f_change_staff_table2.py  ab2e6c941b0f_create_tables.py  f96beafd5c0c_change_staff_table3.py
app/: database.py  main.py  models.py
app/alembic/: env.py
app/alembic/versions/: 0e2e2409005b_change_staff_table.py  532d2eb1879f_added_position_table.py  65707e61042e_create_tables.py  7daf904ebd3f_change_staff_table2.py  ab2e6c941b0f_create_tables.py  f96beafd5c0c_change_staff_table3.py
app/pydantic_models/: players.py  teams.py
app/routers/: players.py  teams.py
app/services/: player_service.py
app/test/: test_main.py  test_player_service.py
routers/: players.py  teams.py
services/: player_service.py
test/: test_main.py  test_player_service.py
