[tool.poetry]
name = "nba"
version = "0.1.0"
description = ""
authors = ["ymuza <yamil.muza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.27"
fastapi = "^0.110.0"
pydantic = "^2.6.3"
psycopg = "^3.1.18"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.27.1"
black = "20.8b1"
flake8 = "^7.0.0"
isort = "^5.13.2"
redis = "^5.0.3"
pytest = "^8.1.2"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"
pre-commit = "^3.7.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
